--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "java.project.sourcePaths": [
         ""
-    ]
+    ],
+    "compile-hero.disable-compile-files-on-did-save-code": false
 }
