--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,14 @@
             "type": "java",
             "name": "Launch Trabalho2",
             "request": "launch",
+            "mainClass": "SensorAtuador.Trabalho2",
+            "projectName": "Lab-Comp-Concorrente1_304a1c8c",
+            "args": "10 0"
+        },
+        {
+            "type": "java",
+            "name": "Launch Trabalho2",
+            "request": "launch",
             "mainClass": "Trabalho2.Trabalho2",
             "projectName": "Lab-Comp-Concorrente1_304a1c8c"
         },
